--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.4.1",
     "swiper": "^5.2.1",
     "vue": "^2.6.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
