--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "swiper": "^5.2.1",
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
